Show correct dark mode icon

--- a/css/sass/modules/_header.scss
+++ b/css/sass/modules/_header.scss
@@ -186,7 +186,7 @@ a:visited.site-brand {
     display: none;
   }
 
-  body.site-mode--dark & {
+  :root.site-mode--dark & {
     .site-mode-toggle__icon--light {
       display: none;
     }
